@@ -353,6 +353,10 @@ namespace libtorrent {
 		// or if we have the piece
 		bool is_piece_finished(piece_index_t index) const;
 
+		// returns true if all blocks in this piece are finished
+		// and have been written to disk
+		bool is_piece_ready(piece_index_t index) const;
+
 		// returns true if we have the piece or if the piece
 		// has passed the hash check
 		bool has_piece_passed(piece_index_t index) const;
